# milestone-tracker

./: index.html  package.json
src/: App.tsx  global.css  shortcuts.ts  state.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ActiveMilestoneView.tsx  Button.tsx  Containers.tsx  IconButton.tsx  MilestoneSetEditor.tsx  MilestoneSets.tsx  Milestones.tsx  Settings.tsx  ShortcutBadge.tsx  Stopwatch.tsx  TimeDisplay.tsx  TimeDisplaySpan.tsx
src/components/atoms/: Button.tsx
src/components/charts/: LineChart.tsx
src/components/dialog/: DialogFooter.tsx  DialogHeader.tsx  Drawer.tsx  Modal.tsx
src/components/icons/: CogIcon.tsx  CreateIcon.tsx  EditIcon.tsx  ExportIcon.tsx  ImportIcon.tsx  LineChartIcon.tsx  PauseIcon.tsx  PlayIcon.tsx  TrashIcon.tsx  UndoIcon.tsx
