[package]
name = "milestonetracker"
version = "0.1.0"
description = "Create sets of timed milestones and compete against your best times."
authors = ["LankyMoose"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
